# late_chunking

./: .gitignore  .pre-commit-config.yaml  README.md  comparison_results.txt  config.yaml  embedder_late_chunking.py  embedders.py  parquet.py  pyproject.toml  rag_comparison.py  requirements.txt  setup.py  web_visualizer.py  wiki_extractor.py
documents/: bonn.txt  cologne.txt  düsseldorf.txt  los_angeles.txt  new_york_city.txt
examples/: basic_comparison.py  comprehensive_comparison.py  fixed_token_comparison.py
src/late_chunking/: chunkers.py  config.py  rag_comparison.py
src/late_chunking/data/templates/: visualizer.html
src/late_chunking/embedders/: __init__.py  base.py  huggingface.py  late_chunking.py  openai.py  vector_store.py
src/late_chunking/visualization/: web_visualizer.py
tests/: test_chunkers.py  test_embedders.py
